--- a/smart2.html
+++ b/smart2.html
@@ -103,6 +103,10 @@
     function handleFile() {
         const fileInput = document.getElementById('fileInput');
         const file = fileInput.files[0];
+        if (!file) {
+            alert('Please select a file to upload.');
+            return;
+        }
         const reader = new FileReader();
         let readMethod;
 
@@ -201,6 +205,7 @@
         document.getElementById('fileInput').value = '';
         document.getElementById('output').innerHTML = '';
         document.getElementById('downloadBtn').style.display = 'none';
+        document.getElementById('fileInput').value = null; // Reset the file input
     }
 
     function downloadResults() {
