--- a/smart2.html
+++ b/smart2.html
@@ -1,92 +1,179 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
-<meta charset="utf-8">
-<title> SARS-CoV-2 SMART-Assay</title>
-<link rel="stylesheet" href="style_covid_19.css">	
+    <meta charset="utf-8">
+    <title>SARS-CoV-2 SMART-Assay</title>
+    <link rel="stylesheet" href="style_covid_19.css">
 </head>
 <header>
-  <center><h1>SARS-CoV-2 SMART-Assay</h1></center>
+    <center><h1>SARS-CoV-2 SMART-Assay</h1></center>
 </header>
 <h3>Subgenomic mRNA Active Replication Test (SMART) Data Analysis and Reporting Software</h3>
-<h4> Input the values as round figures, no decimal points </h4>
-<h4> If any of the 3 Ct values is "undetected" please write the respective value as 45 in the calculator</h4>
+<h4>Input the values as round figures, no decimal points</h4>
+<h4>If any of the 3 Ct values is "undetected", please write the respective value as 45 in the calculator</h4>
+
+<!-- Single Sample Processing -->
 <form id="myForm">
-<table>
-    <tbody>
-<tr>
-<td>Genomic Ct value</td> 
-<td><input id="Genomic" type="number" min = "0" placeholder="Genomic Ct value" /></td>
-</tr>
-<tr>
-<td>Subgenomic Ct value</td> 
-<td><input id="Subgenomic" type="number" min = "0" placeholder="Subgenomic Ct value" /></td>    
-</tr>
-<tr>
-<td>RNAse P Ct value</td>
-<td><input id="RPN" type="number" min = "0"  placeholder="RNAse P Ct value" /></td>
-</tr>
-</tbody>
-</table>
- <br />
- <br />
-   <input class="submit" type="button" value="Submit" onclick="genomic()" />
-  <p id = "result" > Result:     </p>
-   <input type="button" onclick="myFunction()" value="Reset form" />
+    <table>
+        <tbody>
+            <tr>
+                <td>Genomic Ct value</td>
+                <td><input id="Genomic" type="number" min="0" placeholder="Genomic Ct value" /></td>
+            </tr>
+            <tr>
+                <td>Subgenomic Ct value</td>
+                <td><input id="Subgenomic" type="number" min="0" placeholder="Subgenomic Ct value" /></td>
+            </tr>
+            <tr>
+                <td>RNAse P Ct value</td>
+                <td><input id="RPN" type="number" min="0" placeholder="RNAse P Ct value" /></td>
+            </tr>
+        </tbody>
+    </table>
+    <br />
+    <input class="submit" type="button" value="Submit" onclick="genomic()" />
+    <p id="result">Result:</p>
+    <input type="button" onclick="myFunction()" value="Reset form" />
 </form>
+
+<!-- Bulk Processing -->
+<h3>Bulk Processing</h3>
+<input type="file" id="fileInput" accept=".xlsx, .xls, .csv, .tsv" />
+<input type="button" value="Upload and Analyze" onclick="uploadAndAnalyze()" />
+<table id="resultsTable" border="1">
+    <thead>
+        <tr>
+            <th>Patient ID</th>
+            <th>Genomic Ct</th>
+            <th>Subgenomic Ct</th>
+            <th>RPN Ct</th>
+            <th>Result</th>
+        </tr>
+    </thead>
+    <tbody></tbody>
+</table>
+<input type="button" value="Download Results" onclick="downloadResults()" />
+<input type="button" value="Reset Bulk Processing" onclick="resetBulkProcessing()" />
+
 <h2><strong>Disclaimer:</strong></h2>
-<p>The results derived here are only for research purposes, this is not to be used for diagnosis. A diagnosis is only made by a clinician in conjunction with approved diagnostic tests, a physical examination, and medical history.</p>
+<p>The results derived here are only for research purposes; this is not to be used for diagnosis. A diagnosis is only made by a clinician in conjunction with approved diagnostic tests, a physical examination, and medical history.</p>
 
-<script> 
-function genomic () { 
-var genomic = Number(document.getElementById("Genomic").value);
-var subgenomic = Number(document.getElementById("Subgenomic").value);
-var RPN_ct = Number(document.getElementById("RPN").value);
-var delta_delta = ((subgenomic - genomic) - RPN_ct)
-var fold = Math.pow(2, -delta_delta )
-// Remember in this code, for Inconsistency, it has be less than 40 for subgenomic essentially 39 and below & 40 for genomic
-// For negative for SARS-CoV-2 it needs to be 40 and 40 essentially for both
-
-if (RPN_ct > 38) { 
-        document.getElementById("result").innerHTML =  "Result:" +'Invalid run due to RNAse P Ct values';
-} 
-if (RPN_ct <= 38) { 
-   if (genomic <= 23) { 
-        document.getElementById("result").innerHTML = "Result: " +  'Sample is Positive for actively replicating SARS-CoV-2 Virus';
-} else if (genomic >= 40 && subgenomic >= 40 ) { 
-  document.getElementById("result").innerHTML = "Result: " + 'Sample is Negative for SARS-CoV-2';
-} else if (genomic >= 40 && subgenomic < 40) { 
-  document.getElementById("result").innerHTML = "Result: " + 'Invalid run due to Inconsistency';
-} else if (genomic >= 35 ) { 
-  document.getElementById("result").innerHTML = "Result: " + 'Sample is Negative for actively replicating SARS-CoV-2 Virus. Sample is Positive for presence of SARS-CoV-2 Virus';
-} else if (genomic >= 36 && genomic <= 40) { 
-        document.getElementById("result").innerHTML = "Result:" + 'Sample is Negative for actively replicating SARS-CoV-2 Virus';
-} else if (genomic > 23 && genomic <= 35) {
-    if (fold >= 1618756) { 
-        document.getElementById('result').innerHTML = "Result: " + 'Sample is Positive for actively replicating SARS-CoV-2 Virus'; 
-        
-} else if (fold < 1618756) { 
-        document.getElementById('result').innerHTML = "Result:" + 'Sample is Negative for actively replicating SARS-CoV-2 Virus. Sample is Positive for the presence of SARS-CoV-2 Virus.';
-    } 
-}
-  }      
-}
-    
-</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
 <script>
-document.addEventListener("keydown", function(e){
-  // USE THIS TO DISABLE CONTROL AND ALL FUNCTION KEYS
-  // if (e.ctrlKey || (e.keyCode>=112 && e.keyCode<=123)) {
-  // THIS WILL ONLY DISABLE CONTROL AND F12
-  if (e.ctrlKey || e.keyCode==123) {
-    e.stopPropagation();
-    e.preventDefault();
-  }
-});
-</script>
-<script>
-  function myFunction() {
-  document.getElementById("myForm").reset();
-  document.getElementById("result").innerHTML = "Result:";
+function genomic() {
+    var genomic = Number(document.getElementById("Genomic").value);
+    var subgenomic = Number(document.getElementById("Subgenomic").value);
+    var RPN_ct = Number(document.getElementById("RPN").value);
+    var delta_delta = ((subgenomic - genomic) - RPN_ct);
+    var fold = Math.pow(2, -delta_delta);
 
+    if (RPN_ct > 38) {
+        document.getElementById("result").innerHTML = "Result: Invalid run due to RNAse P Ct values";
+    } else if (genomic <= 23) {
+        document.getElementById("result").innerHTML = "Result: Sample is Positive for actively replicating SARS-CoV-2 Virus";
+    } else if (genomic >= 40 && subgenomic >= 40) {
+        document.getElementById("result").innerHTML = "Result: Sample is Negative for SARS-CoV-2";
+    } else if (genomic >= 40 && subgenomic < 40) {
+        document.getElementById("result").innerHTML = "Result: Invalid run due to Inconsistency";
+    } else if (genomic >= 35) {
+        document.getElementById("result").innerHTML = "Result: Sample is Negative for actively replicating SARS-CoV-2 Virus. Sample is Positive for presence of SARS-CoV-2 Virus";
+    } else if (genomic >= 36 && genomic <= 40) {
+        document.getElementById("result").innerHTML = "Result: Sample is Negative for actively replicating SARS-CoV-2 Virus";
+    } else if (genomic > 23 && genomic <= 35) {
+        if (fold >= 1618756) {
+            document.getElementById('result').innerHTML = "Result: Sample is Positive for actively replicating SARS-CoV-2 Virus";
+        } else if (fold < 1618756) {
+            document.getElementById('result').innerHTML = "Result: Sample is Negative for actively replicating SARS-CoV-2 Virus. Sample is Positive for the presence of SARS-CoV-2 Virus.";
+        }
+    }
+}
+
+function myFunction() {
+    document.getElementById("myForm").reset();
+    document.getElementById("result").innerHTML = "Result:";
+}
+
+function uploadAndAnalyze() {
+    var fileInput = document.getElementById("fileInput");
+    var file = fileInput.files[0];
+    var reader = new FileReader();
+    reader.onload = function(e) {
+        var data = e.target.result;
+        var workbook = XLSX.read(data, { type: 'binary' });
+        var sheetName = workbook.SheetNames[0];
+        var worksheet = workbook.Sheets[sheetName];
+        var json = XLSX.utils.sheet_to_json(worksheet, { header: 1 });
+        processBulkData(json);
+    };
+    reader.readAsBinaryString(file);
+}
+
+function processBulkData(data) {
+    var resultsTable = document.getElementById("resultsTable");
+    var resultsBody = resultsTable.tBodies[0];
+    resultsBody.innerHTML = "";
+    for (var i = 0; i < data.length; i++) {
+        var row = resultsBody.insertRow();
+        var patientIdCell = row.insertCell();
+        var genomicCtCell = row.insertCell();
+        var subgenomicCtCell = row.insertCell();
+        var rpnCtCell = row.insertCell();
+        var resultCell = row.insertCell();
+        patientIdCell.innerHTML = data[i][0];
+        genomicCtCell.innerHTML = data[i][1];
+        subgenomicCtCell.innerHTML = data[i][2];
+        rpnCtCell.innerHTML = data[i][3];
+        var genomic = Number(data[i][1]);
+        var subgenomic = Number(data[i][2]);
+        var RPN_ct = Number(data[i][3]);
+        var delta_delta = ((subgenomic - genomic) - RPN_ct);
+        var fold = Math.pow(2, -delta_delta);
+        if (RPN_ct > 38) {
+            resultCell.innerHTML = "Invalid run due to RNAse P Ct values";
+        } else if (genomic <= 23) {
+            resultCell.innerHTML = "Sample is Positive for actively replicating SARS-CoV-2 Virus";
+        } else if (genomic >= 40 && subgenomic >= 40) {
+            resultCell.innerHTML = "Sample is Negative for SARS-CoV-2";
+        } else if (genomic >= 40 && subgenomic < 40) {
+            resultCell.innerHTML = "Invalid run due to Inconsistency";
+        } else if (genomic >= 35) {
+            resultCell.innerHTML = "Sample is Negative for actively replicating SARS-CoV-2 Virus. Sample is Positive for presence of SARS-CoV-2 Virus";
+        } else if (genomic >= 36 && genomic <= 40) {
+            resultCell.innerHTML = "Sample is Negative for actively replicating SARS-CoV-2 Virus";
+        } else if (genomic > 23 && genomic <= 35) {
+            if (fold >= 1618756) {
+                resultCell.innerHTML = "Sample is Positive for actively replicating SARS-CoV-2 Virus";
+            } else if (fold < 1618756) {
+                resultCell.innerHTML = "Sample is Negative for actively replicating SARS-CoV-2 Virus. Sample is Positive for the presence of SARS-CoV-2 Virus.";
+            }
+        }
+    }
+}
+
+function downloadResults() {
+    var resultsTable = document.getElementById("resultsTable");
+    var resultsBody = resultsTable.tBodies[0];
+    var data = [];
+    for (var i = 0; i < resultsBody.rows.length; i++) {
+        var row = resultsBody.rows[i];
+        var patientId = row.cells[0].innerHTML;
+        var genomicCt = row.cells[1].innerHTML;
+        var subgenomicCt = row.cells[2].innerHTML;
+        var rpnCt = row.cells[3].innerHTML;
+        var result = row.cells[4].innerHTML;
+        data.push([patientId, genomicCt, subgenomicCt, rpnCt, result]);
+    }
+    var fileExtension = document.getElementById("fileInput").value.split('.').pop();
+    var blob = new Blob([XLSX.utils.json_to_sheet(data)], { type: 'application/vnd.openxmlformats-officedocument.spreadsheetml.sheet' });
+    var url = URL.createObjectURL(blob);
+    var a = document.createElement('a');
+    a.href = url;
+    a.download = 'results.' + fileExtension;
+    a.click();
+}
+
+function resetBulkProcessing() {
+    document.getElementById("fileInput").value = "";
+    document.getElementById("resultsTable").tBodies[0].innerHTML = "";
 }
 </script>
