--- a/smart2.html
+++ b/smart2.html
@@ -70,7 +70,7 @@
 <!-- Bulk Processing -->
 <h3>Bulk Processing</h3>
 
-<h4>Please confirm that your input file follows the formatting shown below. Otherwise the program will not work as intended</h4>    
+<h4>Please confirm that your input file follows the formatting shown below. Otherwise the program will not work as intended.</h4>    
     
 <input type="file" id="fileInput" accept=".xlsx, .xls, .csv, .tsv" />
 <input type="button" value="Upload and Analyze" onclick="uploadAndAnalyze()" />
