--- a/smart2.html
+++ b/smart2.html
@@ -69,9 +69,7 @@
 
 <!-- Bulk Processing -->
 <h3>Bulk Processing</h3>
-
 <h4>Please confirm that your input file follows the formatting shown below. Otherwise the program will not work as intended.</h4>    
-    
 <input type="file" id="fileInput" accept=".xlsx, .xls, .csv, .tsv" />
 <input type="button" value="Upload and Analyze" onclick="uploadAndAnalyze()" />
 <table id="resultsTable" border="1">
@@ -99,7 +97,7 @@ function genomic() {
     var subgenomic = Number(document.getElementById("Subgenomic").value);
     var RPN_ct = Number(document.getElementById("RPN").value);
     var delta_delta = ((subgenomic - genomic) - RPN_ct);
-    var fold = Math.pow(2, -delta_delta);
+    var fold = Math .pow(2, -delta_delta);
 
     if (RPN_ct > 38) {
         document.getElementById("result").innerHTML = "Result: Invalid run due to RNAse P Ct values";
@@ -177,7 +175,7 @@ function processBulkData(data) {
         } else if (genomic > 23 && genomic <= 35) {
             if (fold >= 1618756) {
                 resultCell.innerHTML = "Sample is Positive for actively replicating SARS-CoV-2 Virus";
-            } else if (fold < 1618756) {
+            } else if (fold < 1618756 ) {
                 resultCell.innerHTML = "Sample is Negative for actively replicating SARS-CoV-2 Virus. Sample is Positive for the presence of SARS-CoV-2 Virus.";
             }
         }
@@ -197,13 +195,32 @@ function downloadResults() {
         var result = row.cells[4].innerHTML;
         data.push([patientId, genomicCt, subgenomicCt, rpnCt, result]);
     }
-    var fileExtension = document.getElementById("fileInput").value.split('.').pop();
-    var blob = new Blob([XLSX.utils.json_to_sheet(data)], { type: 'application/vnd.openxmlformats-officedocument.spreadsheetml.sheet' });
+
+    // Create a new workbook and add the data
+    var wb = XLSX.utils.book_new();
+    var ws = XLSX.utils.aoa_to_sheet([["Patient ID", "Genomic Ct", "Subgenomic Ct", "RPN Ct", "Result"], ...data]); // Add headers
+    XLSX.utils.book_append_sheet(wb, ws, "Results");
+
+    // Write the workbook to a binary string
+    var wbout = XLSX.write(wb, { bookType: 'xlsx', type: 'binary' });
+
+    // Create a Blob from the binary string
+    function s2ab(s) {
+        var buf = new ArrayBuffer(s.length);
+        var view = new Uint8Array(buf);
+        for (var i = 0; i < s.length; i++) {
+            view[i] = s.charCodeAt(i) & 0xFF;
+        }
+        return buf;
+    }
+
+    var blob = new Blob([s2ab(wbout)], { type: 'application/octet-stream' });
     var url = URL.createObjectURL(blob);
     var a = document.createElement('a');
     a.href = url;
-    a.download = 'results.' + fileExtension;
+    a.download = 'results.xlsx';
     a.click();
+    URL.revokeObjectURL(url); // Clean up the URL object
 }
 
 function resetBulkProcessing() {
