--- a/smart2.html
+++ b/smart2.html
@@ -96,7 +96,7 @@ function genomic() {
     var genomic = Number(document.getElementById("Genomic").value);
     var subgenomic = Number(document.getElementById("Subgenomic").value);
     var RPN_ct = Number(document.getElementById("RPN").value);
-    var delta_delta = ((subgenomic - genomic) - RPN_ct);
+    var delta_delta = (( subgenomic - genomic) - RPN_ct);
     var fold = Math .pow(2, -delta_delta);
 
     if (RPN_ct > 38) {
@@ -174,7 +174,7 @@ function processBulkData(data) {
             resultCell.innerHTML = "Sample is Negative for actively replicating SARS-CoV-2 Virus";
         } else if (genomic > 23 && genomic <= 35) {
             if (fold >= 1618756) {
-                resultCell.innerHTML = "Sample is Positive for actively replicating SARS-CoV-2 Virus";
+                resultCell.innerHTML = "Sample is Positive for actively replicating SARS -CoV-2 Virus";
             } else if (fold < 1618756 ) {
                 resultCell.innerHTML = "Sample is Negative for actively replicating SARS-CoV-2 Virus. Sample is Positive for the presence of SARS-CoV-2 Virus.";
             }
@@ -196,31 +196,52 @@ function downloadResults() {
         data.push([patientId, genomicCt, subgenomicCt, rpnCt, result]);
     }
 
-    // Create a new workbook and add the data
-    var wb = XLSX.utils.book_new();
-    var ws = XLSX.utils.aoa_to_sheet([["Patient ID", "Genomic Ct", "Subgenomic Ct", "RPN Ct", "Result"], ...data]); // Add headers
-    XLSX.utils.book_append_sheet(wb, ws, "Results");
+    // Get the file extension of the uploaded file
+    var fileExtension = document.getElementById("fileInput").value.split('.').pop().toLowerCase();
+    
+    if (fileExtension === 'xlsx' || fileExtension === 'xls') {
+        // Create a new workbook and add the data
+        var wb = XLSX.utils.book_new();
+        var ws = XLSX.utils.aoa_to_sheet([["Patient ID", "Genomic Ct", "Subgenomic Ct", "RPN Ct", "Result"], ...data]); // Add headers
+        XLSX.utils.book_append_sheet(wb, ws, "Results");
 
-    // Write the workbook to a binary string
-    var wbout = XLSX.write(wb, { bookType: 'xlsx', type: 'binary' });
+        // Write the workbook to a binary string
+        var wbout = XLSX.write(wb, { bookType: 'xlsx', type: 'binary' });
 
-    // Create a Blob from the binary string
-    function s2ab(s) {
-        var buf = new ArrayBuffer(s.length);
-        var view = new Uint8Array(buf);
-        for (var i = 0; i < s.length; i++) {
-            view[i] = s.charCodeAt(i) & 0xFF;
+        // Create a Blob from the binary string
+        function s2ab(s) {
+            var buf = new ArrayBuffer(s.length);
+            var view = new Uint8Array(buf);
+            for (var i = 0; i < s.length; i++) {
+                view[i] = s.charCodeAt(i) & 0xFF;
+            }
+            return buf;
         }
-        return buf;
-    }
 
-    var blob = new Blob([s2ab(wbout)], { type: 'application/octet-stream' });
-    var url = URL.createObjectURL(blob);
-    var a = document.createElement('a');
-    a.href = url;
-    a.download = 'results.xlsx';
-    a.click();
-    URL.revokeObjectURL(url); // Clean up the URL object
+        var blob = new Blob([s2ab(wbout)], { type: 'application/octet-stream' });
+        var url = URL.createObjectURL(blob);
+        var a = document.createElement('a');
+        a.href = url;
+        a.download = 'results.xlsx';
+        a.click();
+        URL.revokeObjectURL(url); // Clean up the URL object
+    } else if (fileExtension === 'csv' || fileExtension === 'tsv') {
+        // Convert data to CSV or TSV format
+        var delimiter = (fileExtension === 'csv') ? ',' : '\t';
+        var csvContent = "data:text/csv;charset=utf-8," 
+            + [["Patient ID", "Genomic Ct", "Subgenomic Ct", "RPN Ct", "Result"].join(delimiter)]
+            + data.map(e => e.join(delimiter)).join("\n");
+
+        var encodedUri = encodeURI(csvContent);
+        var a = document.createElement('a');
+        a.setAttribute("href", encodedUri);
+        a.setAttribute("download", 'results.' + fileExtension);
+        document.body.appendChild(a); // Required for Firefox
+        a.click();
+        document.body.removeChild(a); // Clean up
+    } else {
+        alert("Unsupported file type for download.");
+    }
 }
 
 function resetBulkProcessing() {
